# opengltest

./: CMakeLists.txt
cmake/: App  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/.cache/clangd/index/: glad.c.4B381511F8E87818.idx  glad.h.F53D28F6D1E4341F.idx  glfw3.h.36C7D92A6B4DF525.idx  glfw3.h.BC80E74A3D5B43E2.idx  khrplatform.h.0E12A6F614C206BD.idx  main.cpp.FE09E19767E8A602.idx
include/glad/: glad.h
src/: glad.c  main.cpp
